# algorithmic-trading-TL-

./: .env  .gitignore  LICENSE  README.md  docker-compose.yml  pyrightconfig.json  tmux.md
admin/documents/: Setting up environment.md  api.md  backtesting (BM) API Design.md
agent_pool/: package.xml  readme.md  setup.cfg  setup.py
agent_pool/agent_pool/: CombinedSignal.py  ap.py  mixture.py  utils.py
agent_pool/agent_pool/agents/: BollingerBands.py  MACD.py  RSI.py  agent.py
docker/: develop.md  dockerfile  readme.md
docker/script/: arrow.sh  base-tool.sh  boost.sh  ccapi.sh  env.sh  hffix.sh  rapidjson.sh  ros2.sh  tmux.sh  websocket.sh  zsh.sh
example_code/: README.md  jsonRead  jsonRead.cpp  jsonWrite  jsonWrite.cpp  large_trades.json  parquetRead  parquetRead.cpp  parquetWrite  parquetWrite.cpp  readWithCache  readWithCache.cpp  sqlRead  sqlRead.cpp  sqlWrite  sqlWrite.cpp  webSocket  webSocket.cpp
launch/: system_running.py
market_data_subscription/: CMakeLists.txt  main.cpp
src/accounting/: CMakeLists.txt  package.xml
src/accounting/src/: accounting.cpp  logging.cpp
src/backtesting/: package.xml  readme.md  setup.cfg  setup.py
src/backtesting/backtesting/: btm.py  market.py  record.py  utils.py
src/backtesting/backtesting/bt_pool/: bt.py  bt1.py  bt2.py  bt3.py
src/backtesting/backtesting/data_provider/: __init__.py  dp.py  dp1.py  dp2.py  dp3.py
src/backtesting/backtesting/fake/: fake_ag.py  fake_ap.py  fake_dp.py  fake_gtw.py
src/backtesting/test/: test_market.py
src/command_line_interface/: CMakeLists.txt  package.xml
src/command_line_interface/src/: command_line_interface.cpp
src/data_storage/: CMakeLists.txt  package.xml
src/data_storage/include/: TickDataParquet.h
src/data_storage/src/: read_data.cpp  write_data.cpp
src/database_test/: CMakeLists.txt  package.xml
src/database_test/src/: database_test.cpp
src/risk_management/: arima_model.py  risk_measurement.py
src/risk_management/risk_metrics/: CMakeLists.txt  package.xml
src/risk_management/risk_metrics/src/: risk_calculation.cpp  risk_server.cpp  util.cpp
src/trading_engine/action_approval/: CMakeLists.txt  package.xml
src/trading_engine/action_approval/src/: action_approval.cpp  testAgentPool.cpp  testControlExternal.cpp  testRiskMetrics.cpp
src/trading_engine/data_pulling/: CMakeLists.txt  package.xml
src/trading_engine/data_pulling/include/: extractData.h
src/trading_engine/data_pulling/src/: alpaca_trading_node.cpp  alpha_vantage_node.cpp  alpha_vantage_node_his.cpp  ccapi_bitmex_trading_node.cpp  data_pull.cpp  ohlcv_processor.cpp  polygon_websocket_node.cpp
src/trading_engine/data_storaging/: CMakeLists.txt  package.xml
src/trading_engine/data_storaging/include/: dataWrite.h
src/trading_engine/data_storaging/src/: data_storage.cpp  polygon_node.cpp
src/trading_engine/storage_interfaces/: CMakeLists.txt  package.xml
src/trading_engine/system_interface/: CMakeLists.txt  package.xml
src/trading_engine/system_interface/action/: Progress.action
src/trading_engine/system_interface/msg/: Log.msg  LogArray.msg  Order.msg  Price.msg  TemplateInfo.msg  TickData.msg
src/trading_engine/system_interface/srv/: CalculateCorrelation.srv  CalculateLiquidityRisk.srv  CalculatePriceRisk.srv  CloseAgent.srv  GetHistoricalPrices.srv  GetHistoricalTickDatas.srv  OrderRisk.srv  RunBacktesting.srv  SetAgent.srv  SqlQuery.srv
src/trading_engine/trade_action/: CMakeLists.txt  package.xml
src/trading_engine/trade_action/src/: action_client.cpp  action_server.cpp
src/trading_engine/trade_strategy/: CMakeLists.txt  package.xml
src/trading_engine/trade_strategy/src/: strategy1.cpp  strategy2.cpp
src/trading_strategies/: demo_backtesting.py
src/trading_strategies/agent/: agent.py  empty_agent.py  margin_calculator.py  performance.py
src/trading_strategies/agent/transactions/: positions.py  transaction.py  transactions.py
src/trading_strategies/backtesting/: backtester.py  backtesting.py  backtesting_config.py  backtesting_summary.py  daily_market_replay.py  simulated_market.py  stock_selection.py
src/trading_strategies/data_access/: data_access.py  data_package.py
src/trading_strategies/order/: order.py
src/trading_strategies/strategies/financial_asset/: financial_asset.py  option.py  price.py  stock.py
src/trading_strategies/strategies/strategy/: strategy.py
src/trading_strategies/strategies/strategy/option_strategy/: diagonal.py  long_call.py  long_put.py  option_strategy.py  short_call.py  short_put.py  straddle.py  strike_spec.py
src/trading_strategies/strategies/strategy/option_strategy/calculators/: option_pricing.py
src/trading_strategies/util/: calculate_volatility.py  read_file.py  util.py
system composer/: UI and CLI.slreqx  accounting and logging.slreqx  action approval.slreqx  agent pool.slreqx  backtesting.slreqx  data storage.slreqx  gateway.slreqx  risk metrics.slreqx  system.slx
test/: extractData_test.cpp  test_option_pricing.py  test_read_file.py  test_volatility.py
test/integration/s1/: run.zsh
test/integration/s2/: build.zsh  readme.md  run.zsh
test/integration/s3/: build.zsh  readme.md  run.zsh
test/integration/s4/: build.zsh  readme.md  run.zsh
test/integration/s5/: build.zsh  readme.md  run.zsh
test/integration/s6/: build.zsh  readme.md  run.zsh
test/integration/s7/: build.zsh  readme.md  run.zsh
test/integration/s8/: readme.md  run.zsh
test/integration/s9/: build.zsh  readme.md  run.zsh
test/risk_metrics/: test_sorting.cpp
